# rust-projects

./: README.md
lbm-web-gpu/: Cargo.toml
lbm-web-gpu/src/: collide.wgsl  driver.rs  index.html  lbm.rs  lib.rs  main.rs  stream.wgsl
lbm-web-gpu/src/barrier_shapes/: blob.rs  line.rs  merge_shapes.rs  mod.rs
lbm-web-gpu/src/rewritten_shaders/color_map/: inferno.wgsl  viridis.wgsl
lbm-web-gpu/src/rewritten_shaders/summary_stats/: rho.wgsl
lbm-web-gpu/src/rewritten_shaders/update_barrier/: barrier_draw.wgsl
lbm-web-gpu/src/shaders/: collide.wgsl  color_map.wgsl  curl.wgsl  render.wgsl  stream_cardinal.wgsl  stream_corners.wgsl
nelder-meade/src/: example_functions.rs  helper_functions.rs  main.rs  nelder_meade.rs  point.rs  simplex.rs
