[package]
name = "lbm-web-gpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
winit = "0.28"
bytemuck = "1.13.1"
env_logger = "0.10"
timeit = "0.1.2"
pollster = "0.3.0"
wgpu = "0.16"
line_drawing = "1.0.0"
cfg-if = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Gpu"
]}